--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="navbar">
       <div class="top">
         <div class="social-links">
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -23,7 +23,7 @@
                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -36,7 +36,7 @@
                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -49,7 +49,7 @@
                 d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -62,7 +62,7 @@
                 d="M11.19 12.195c2.016-.24 3.77-1.475 3.99-2.603.348-1.778.32-4.339.32-4.339 0-3.47-2.286-4.488-2.286-4.488C12.062.238 10.083.017 8.027 0h-.05C5.92.017 3.942.238 2.79.765c0 0-2.285 1.017-2.285 4.488l-.002.662c-.004.64-.007 1.35.011 2.091.083 3.394.626 6.74 3.78 7.57 1.454.383 2.703.463 3.709.408 1.823-.1 2.847-.647 2.847-.647l-.06-1.317s-1.303.41-2.767.36c-1.45-.05-2.98-.156-3.215-1.928a4 4 0 0 1-.033-.496s1.424.346 3.228.428c1.103.05 2.137-.064 3.188-.189zm1.613-2.47H11.13v-4.08c0-.859-.364-1.295-1.091-1.295-.804 0-1.207.517-1.207 1.541v2.233H7.168V5.89c0-1.024-.403-1.541-1.207-1.541-.727 0-1.091.436-1.091 1.296v4.079H3.197V5.522q0-1.288.66-2.046c.456-.505 1.052-.764 1.793-.764.856 0 1.504.328 1.933.983L8 4.39l.417-.695c.429-.655 1.077-.983 1.934-.983.74 0 1.336.259 1.791.764q.662.757.661 2.046z"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -75,7 +75,7 @@
                 d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -88,7 +88,7 @@
                 d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="middle">
-        <a href="" class="logo">Spiel</a>
+        <a href="#" class="logo">Spiel</a>
       </div>
       <div class="bottom">
         <div class="hamburger">
@@ -139,11 +139,11 @@
           <span class="bar"></span>
         </div>
         <div class="links">
-          <a href="" class="link">News</a>
-          <a href="" class="link">Reviews</a>
-          <a href="" class="link">Guides</a>
-          <a href="" class="link">Trending</a>
-          <a href="" class="link"
+          <a href="#" class="link">News</a>
+          <a href="#" class="link">Reviews</a>
+          <a href="#" class="link">Guides</a>
+          <a href="#" class="link">Trending</a>
+          <a href="#" class="link"
             >Platform
             <select name="platform" id="platform">
               <option value="PlayStation">PlayStation</option>
@@ -175,7 +175,7 @@
               asperiores suscipit rem fuga cupiditate a nemo accusamus quia
               unde! Quaerat fugiat dolorum nobis non.
             </p>
-            <a href="" class="author">John Doe</a>
+            <a href="#" class="author">John Doe</a>
           </div>
         </div>
         <div class="right">
@@ -190,7 +190,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro,
                 unde ea.
               </h3>
-              <a href="" class="author">John Doe</a>
+              <a href="#" class="author">John Doe</a>
             </div>
             <div class="news-3">
               <img
@@ -199,7 +199,7 @@
               />
               <p class="category">Guides</p>
               <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
-              <a href="" class="author">John Doe</a>
+              <a href="#" class="author">John Doe</a>
             </div>
           </div>
           <div class="bottom">
@@ -212,7 +212,7 @@
               <h3>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla!
               </h3>
-              <a href="" class="author">John Doe</a>
+              <a href="#" class="author">John Doe</a>
             </div>
             <div class="news-5">
               <img
@@ -221,7 +221,7 @@
               />
               <p class="category">News, Reviews</p>
               <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-              <a href="" class="author">John Doe</a>
+              <a href="#" class="author">John Doe</a>
             </div>
           </div>
         </div>
@@ -238,7 +238,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, unde
             ea.
           </h3>
-          <a href="" class="author">John Doe</a>
+          <a href="#" class="author">John Doe</a>
         </div>
         <div class="news-2">
           <img
@@ -247,7 +247,7 @@
           />
           <p class="category">Guides</p>
           <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h3>
-          <a href="" class="author">John Doe</a>
+          <a href="#" class="author">John Doe</a>
         </div>
 
         <div class="news-3">
@@ -259,7 +259,7 @@
           <h3>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla!
           </h3>
-          <a href="" class="author">John Doe</a>
+          <a href="#" class="author">John Doe</a>
         </div>
         <div class="news-4">
           <img
@@ -268,16 +268,16 @@
           />
           <p class="category">News, Reviews</p>
           <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-          <a href="" class="author">John Doe</a>
+          <a href="#" class="author">John Doe</a>
         </div>
       </div>
       <h2 class="heading">categories</h2>
       <h1 class="categories-heading">
-        <a href="">Reviews.</a> <a href="">News.</a> <a href="">Guides.</a>
-        <a href="">Deals.</a> <a href="">Videos.</a>
-        <a href="">Reader Poll.</a> <a href="">Features.</a>
-        <a href="">Staff Picks.</a> <a href="">Game Culture.</a>
-        <a href="">Podcast.</a>
+        <a href="#">Reviews.</a> <a href="#">News.</a> <a href="#">Guides.</a>
+        <a href="#">Deals.</a> <a href="#">Videos.</a>
+        <a href="#">Reader Poll.</a> <a href="#">Features.</a>
+        <a href="#">Staff Picks.</a> <a href="#">Game Culture.</a>
+        <a href="#">Podcast.</a>
       </h1>
     </main>
     <footer class="footer">
@@ -311,7 +311,7 @@
           </div>
         </form>
         <div class="social-links">
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -324,7 +324,7 @@
                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -337,7 +337,7 @@
                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -350,7 +350,7 @@
                 d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -363,7 +363,7 @@
                 d="M11.19 12.195c2.016-.24 3.77-1.475 3.99-2.603.348-1.778.32-4.339.32-4.339 0-3.47-2.286-4.488-2.286-4.488C12.062.238 10.083.017 8.027 0h-.05C5.92.017 3.942.238 2.79.765c0 0-2.285 1.017-2.285 4.488l-.002.662c-.004.64-.007 1.35.011 2.091.083 3.394.626 6.74 3.78 7.57 1.454.383 2.703.463 3.709.408 1.823-.1 2.847-.647 2.847-.647l-.06-1.317s-1.303.41-2.767.36c-1.45-.05-2.98-.156-3.215-1.928a4 4 0 0 1-.033-.496s1.424.346 3.228.428c1.103.05 2.137-.064 3.188-.189zm1.613-2.47H11.13v-4.08c0-.859-.364-1.295-1.091-1.295-.804 0-1.207.517-1.207 1.541v2.233H7.168V5.89c0-1.024-.403-1.541-1.207-1.541-.727 0-1.091.436-1.091 1.296v4.079H3.197V5.522q0-1.288.66-2.046c.456-.505 1.052-.764 1.793-.764.856 0 1.504.328 1.933.983L8 4.39l.417-.695c.429-.655 1.077-.983 1.934-.983.74 0 1.336.259 1.791.764q.662.757.661 2.046z"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -376,7 +376,7 @@
                 d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -389,7 +389,7 @@
                 d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"
               /></svg
           ></a>
-          <a href=""
+          <a href="#"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -407,11 +407,11 @@
           ></a>
         </div>
         <div class="links">
-          <a href="" class="link">News</a>
-          <a href="" class="link">Reviews</a>
-          <a href="" class="link">Guides</a>
-          <a href="" class="link">Trending</a>
-          <a href="" class="link"
+          <a href="#" class="link">News</a>
+          <a href="#" class="link">Reviews</a>
+          <a href="#" class="link">Guides</a>
+          <a href="#" class="link">Trending</a>
+          <a href="#" class="link"
             >Platform
             <select name="platform" id="platform">
               <option value="PlayStation">PlayStation</option>
